--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -4,7 +4,7 @@ html, body {
     width: 100%;
 }
 
-#lights { margin: 10px }
+#lights { margin: 0px 10px }
 
 .light {
     border-left: 100px solid transparent;
@@ -22,11 +22,32 @@ html, body {
     left: -10px;
     position: absolute;
     top: 75px;
+	cursor: pointer;
 }
 
 .light.rotated { transform: rotate(180deg) }
 
+.light.rotated::before { transform: rotate(180deg) }
+
+.light.active::before { text-decoration: underline; }
+
 #controls {
     padding: 30px 20px;
+	background: #383838;
+	color: white;
+	z-index: 10;
+	box-shadow: rgb(0 0 0 / 43%) -3px 1px 3px, rgb(0 0 0 / 49%) 0px 1px 2px;
 }
 
+#controls .fas.fa-sync-alt {
+	margin-left: 20px;
+	cursor: pointer;
+}
+
+#color-wheel {
+	margin: 0 auto;
+}
+
+#controls hr {
+	border-top-color: #959595;
+}
